Agregue media queries

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,4 @@
 @import "../scss/layout/nosotros";
 @import "../scss/layout/portada";
 @import "../scss/layout/servicios";
+@import "../scss/layout/media320"
