--- a/Css/style.css
+++ b/Css/style.css
@@ -210,4 +210,13 @@ h2 {
   width: 25rem;
 }
 
+@media screen and (max width 320px) {
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas: "tpap" "tad" "tae";
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
