--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,4 +5,5 @@
 @import "../scss/layout/nosotros";
 @import "../scss/layout/portada";
 @import "../scss/layout/servicios";
-@import "../scss/layout/media320"
+@import "../scss/components/botones";
+
