--- a/Css/style.css
+++ b/Css/style.css
@@ -210,11 +210,47 @@ h2 {
   width: 25rem;
 }
 
-@media screen and (max width 320px) {
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 450px 450px;
+  grid-template-areas: "tpap tad tae" "tpap tad tae";
+  margin: 30px;
+}
+
+.Puerta {
+  grid-area: tpap;
+  text-align: center;
+}
+
+.Puerta img {
+  width: 25rem;
+}
+
+.Distancia {
+  grid-area: tad;
+  text-align: center;
+}
+
+.Distancia img {
+  width: 25rem;
+}
+
+.sempre {
+  grid-area: tae;
+  text-align: center;
+  margin-bottom: 30%;
+}
+
+.sempre img {
+  width: 25rem;
+}
+
+@media screen and (max-width: 720px) {
   .grid {
     display: grid;
-    grid-template-columns: repeat(1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: 1fr;
+    grid-template-rows: 800px 900px;
     grid-template-areas: "tpap" "tad" "tae";
   }
 }
