Agregue el navbar para responsive, sus atibutos y corregi errores en index.html

--- a/scss/layout/_contacto.scss
+++ b/scss/layout/_contacto.scss
@@ -1,5 +1,15 @@
 @import "../utilities/variables";
 
+h2{
+    text-align: center;
+    font-family: 'Bungee Spice', cursive;
+    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Playfair Display', serif;
+    margin: 50px;
+    margin-top: 1px;
+    font-size: 16px;
+}
+
 form{
     box-sizing: border-box;
     width: 10px;
