--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -19,7 +19,7 @@ footer{
 
 .redes{
     padding: 20px;
-    display: flex;
+    display: flexbox;
     justify-content: left;
     a{
         margin: 15px;
