--- a/Css/style.css
+++ b/Css/style.css
@@ -4,6 +4,16 @@
   box-sizing: content-box;
 }
 
+h2 {
+  text-align: center;
+  font-family: "Bungee Spice", cursive;
+  font-family: "Josefin Sans", sans-serif;
+  font-family: "Playfair Display", serif;
+  margin: 50px;
+  margin-top: 1px;
+  font-size: 16px;
+}
+
 form {
   box-sizing: border-box;
   width: 10px;
@@ -68,7 +78,7 @@ footer p {
 
 .redes {
   padding: 20px;
-  display: flex;
+  display: flexbox;
   justify-content: left;
 }
 .redes a {
@@ -109,13 +119,13 @@ footer p {
 header {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   background-color: whitesmoke;
   border-bottom: 2px solid gray;
   padding: 10px;
 }
 header img {
-  width: 11rem;
+  width: 9rem;
 }
 header nav ul {
   list-style-type: none;
@@ -130,11 +140,54 @@ header nav ul li a {
   font-family: "Bungee Spice", cursive;
   font-family: "Josefin Sans", sans-serif;
   font-family: "Playfair Display", serif;
-  font-size: 15px;
+  font-size: 12px;
   padding: 2px 20px 2px 20px;
   border-radius: 5px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
   transition: 1s;
+}
+
+.toggle_btn {
+  color: solid gray;
+  font-size: 2rem;
+  cursor: pointer;
+  display: none;
+}
+
+li a {
+  text-decoration: none;
+  color: whitesmoke;
+  font-size: 1rem;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+li a:hover {
+  color: #0FFB28;
+}
+
+.dropdown_menu {
+  margin: 1.5rem;
+  display: none;
+  position: absolute;
+  right: 2rem;
+  top: 60px;
+  height: 0;
+  width: 300px;
+  background: #314652;
+  backdrop-filter: blur(15px);
+  border-radius: 10px;
+  overflow: hidden;
+  transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.dropdown_menu.open {
+  height: 240px;
+}
+
+.dropdown_menu li {
+  padding: 0.9rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .boton {
@@ -148,8 +201,9 @@ header nav ul li a {
 }
 
 section img {
-  padding: 20px;
-  width: 93rem;
+  vertical-align: middle;
+  max-width: 100%;
+  height: auto;
 }
 
 h1 {
@@ -179,7 +233,6 @@ h2 {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 450px 450px;
   grid-template-areas: "tpap tad tae" "tpap tad tae";
-  margin: 30px;
 }
 
 .Puerta {
@@ -203,7 +256,6 @@ h2 {
 .sempre {
   grid-area: tae;
   text-align: center;
-  margin-bottom: 30%;
 }
 
 .sempre img {
@@ -215,7 +267,6 @@ h2 {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 450px 450px;
   grid-template-areas: "tpap tad tae" "tpap tad tae";
-  margin: 30px;
 }
 
 .Puerta {
@@ -239,7 +290,6 @@ h2 {
 .sempre {
   grid-area: tae;
   text-align: center;
-  margin-bottom: 30%;
 }
 
 .sempre img {
@@ -250,8 +300,25 @@ h2 {
   .grid {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 800px 900px;
+    grid-template-rows: 600px 400px;
     grid-template-areas: "tpap" "tad" "tae";
+  }
+}
+@media (max-width: 992px) {
+  .boton {
+    display: none;
+  }
+  .toggle_btn {
+    display: block;
+  }
+  .dropdown_menu {
+    display: block;
+  }
+}
+@media (max-width: 576px) {
+  .dropdown_menu {
+    left: 2rem;
+    width: unset;
   }
 }
 
