--- a/scss/components/_botones.scss
+++ b/scss/components/_botones.scss
@@ -4,10 +4,29 @@
     .grid{
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 800px 900px;
+        grid-template-rows: 600px 400px;
         grid-template-areas: 
         "tpap"
         "tad"
         "tae";
+    }
+}
+
+@media(max-width: 992px) {
+    .boton{
+        display: none;
+    }
+    .toggle_btn{
+        display: block;
+    }
+    .dropdown_menu{
+        display: block;
+        
+    }
+}
+@media(max-width: 576px){
+    .dropdown_menu{
+        left: 2rem;
+        width: unset;
     }
 }
